--- a/Projects/Client/Client.vcxproj
+++ b/Projects/Client/Client.vcxproj
@@ -61,17 +61,17 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)..\Libs\irrKlang\include;$(SolutionDir)..\Libs\SFML\include;$(SolutionDir)..\Libs\ini_parser\Include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)..\Libs\irrKlang\include;$(SolutionDir)..\Libs\SFML\include;$(SolutionDir)..\Libs\jsoncons\include;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)..\Libs\irrKlang\lib;$(SolutionDir)..\Libs\SFML\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DebugFast|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)..\Libs\irrKlang\include;$(SolutionDir)..\Libs\SFML\include;$(SolutionDir)..\Libs\ini_parser\Include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)..\Libs\irrKlang\include;$(SolutionDir)..\Libs\SFML\include;$(SolutionDir)..\Libs\jsoncons\include;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)..\Libs\irrKlang\lib;$(SolutionDir)..\Libs\SFML\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(SolutionDir)..\Libs\irrKlang\include;$(SolutionDir)..\Libs\SFML\include;$(SolutionDir)..\Libs\ini_parser\Include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)..\Libs\irrKlang\include;$(SolutionDir)..\Libs\SFML\include;$(SolutionDir)..\Libs\jsoncons\include;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)..\Libs\irrKlang\lib;$(SolutionDir)..\Libs\SFML\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -197,6 +197,9 @@
     <ProjectReference Include="..\Common\Common.vcxproj">
       <Project>{fd6a68bf-5aae-4c47-82da-0ec7d4ec4529}</Project>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
