--- a/Projects/Client/Client.vcxproj
+++ b/Projects/Client/Client.vcxproj
@@ -130,7 +130,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\birdman-the-game-teambirb\Source\Constants.hpp" />
     <ClInclude Include="..\..\Source\Architecture\AnimatedSprite.hpp" />
     <ClInclude Include="..\..\Source\Architecture\Audio\AudioEngine.hpp" />
     <ClInclude Include="..\..\Source\Architecture\Audio\AudioEngineIrrklang.hpp" />
@@ -157,10 +156,12 @@
     <ClInclude Include="..\..\Source\Architecture\Timer.hpp" />
     <ClInclude Include="..\..\Source\Architecture\UI\Button.hpp" />
     <ClInclude Include="..\..\Source\Architecture\UI\Menu.hpp" />
+    <ClInclude Include="..\..\Source\Client\Character.h" />
     <ClInclude Include="..\..\Source\Client\MyNetGame.h" />
     <ClInclude Include="..\..\Source\Client\Networking.h" />
     <ClInclude Include="..\..\Source\Client\stdafx.h" />
     <ClInclude Include="..\..\Source\Client\targetver.h" />
+    <ClInclude Include="SpritePaths.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\birdman-the-game-teambirb\Source\Rng.cpp" />
@@ -184,6 +185,7 @@
     <ClCompile Include="..\..\Source\Architecture\Timer.cpp" />
     <ClCompile Include="..\..\Source\Architecture\UI\Button.cpp" />
     <ClCompile Include="..\..\Source\Architecture\UI\Menu.cpp" />
+    <ClCompile Include="..\..\Source\Client\Character.cpp" />
     <ClCompile Include="..\..\Source\Client\MyNetGame.cpp" />
     <ClCompile Include="..\..\Source\Client\main.cpp" />
     <ClCompile Include="..\..\Source\Client\Networking.cpp" />
