--- a/Projects/Client/Client.vcxproj.filters
+++ b/Projects/Client/Client.vcxproj.filters
@@ -76,6 +76,9 @@
     <ClCompile Include="..\..\Source\Architecture\Audio\AudioLocator.cpp">
       <Filter>Source\Architecture\Audio</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\Source\Client\Character.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Source\Client\MyNetGame.h">
@@ -165,11 +168,14 @@
     <ClInclude Include="..\..\Source\Architecture\Rng.h">
       <Filter>Headers\Architecture</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\birdman-the-game-teambirb\Source\Constants.hpp">
-      <Filter>Headers\Architecture</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\Source\Architecture\Audio\AudioLocator.hpp">
       <Filter>Headers\Architecture\Audio</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Source\Client\Character.h">
+      <Filter>Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="SpritePaths.h">
+      <Filter>Headers</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
