--- a/Projects/Client/Client.vcxproj.filters
+++ b/Projects/Client/Client.vcxproj.filters
@@ -7,9 +7,6 @@
     <ClCompile Include="..\..\Source\Client\MyNetGame.cpp">
       <Filter>Source</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\Source\Client\Networking.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\Source\Client\main.cpp">
       <Filter>Source</Filter>
     </ClCompile>
@@ -75,6 +72,12 @@
     </ClCompile>
     <ClCompile Include="..\..\Source\Architecture\Audio\AudioLocator.cpp">
       <Filter>Source\Architecture\Audio</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Source\Architecture\Networking\NetworkClient.cpp">
+      <Filter>Source\Architecture\Networking</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Source\Architecture\Networking\NetworkServer.cpp">
+      <Filter>Source\Architecture\Networking</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -170,6 +173,15 @@
     </ClInclude>
     <ClInclude Include="..\..\Source\Architecture\Audio\AudioLocator.hpp">
       <Filter>Headers\Architecture\Audio</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Source\Architecture\Networking\NetworkClient.hpp">
+      <Filter>Headers\Architecture\Networking</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Source\Architecture\Networking\NetworkServer.hpp">
+      <Filter>Headers\Architecture\Networking</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Source\Architecture\Networking\Network.hpp">
+      <Filter>Headers\Architecture\Networking</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
