--- a/Projects/Client/Client.vcxproj
+++ b/Projects/Client/Client.vcxproj
@@ -150,10 +150,12 @@
     <ClInclude Include="..\..\Source\Architecture\Messages\FunctionMessage.hpp" />
     <ClInclude Include="..\..\Source\Architecture\Messages\Message.hpp" />
     <ClInclude Include="..\..\Source\Architecture\Messages\MessageQueue.hpp" />
-    <ClInclude Include="..\..\Source\Architecture\Networking\Network.hpp" />
-    <ClInclude Include="..\..\Source\Architecture\Networking\NetworkClient.hpp" />
-    <ClInclude Include="..\..\Source\Architecture\Networking\NetworkServer.hpp" />
+    <ClInclude Include="..\..\Source\Architecture\Networking\Client.hpp" />
+    <ClInclude Include="..\..\Source\Architecture\Networking\ClientHost.hpp" />
+    <ClInclude Include="..\..\Source\Architecture\Networking\ClientStandard.hpp" />
     <ClInclude Include="..\..\Source\Architecture\Networking\Packet.hpp" />
+    <ClInclude Include="..\..\Source\Architecture\Networking\Server.hpp" />
+    <ClInclude Include="..\..\Source\Architecture\Networking\ServerHost.hpp" />
     <ClInclude Include="..\..\Source\Architecture\Rng.h" />
     <ClInclude Include="..\..\Source\Architecture\Signals\Connection.hpp" />
     <ClInclude Include="..\..\Source\Architecture\Signals\Disconnector.hpp" />
@@ -188,9 +190,10 @@
     <ClCompile Include="..\..\Source\Architecture\Managers\NetworkManager.cpp" />
     <ClCompile Include="..\..\Source\Architecture\Managers\StateManager.cpp" />
     <ClCompile Include="..\..\Source\Architecture\Messages\MessageQueue.cpp" />
-    <ClCompile Include="..\..\Source\Architecture\Networking\NetworkClient.cpp" />
-    <ClCompile Include="..\..\Source\Architecture\Networking\NetworkServer.cpp" />
+    <ClCompile Include="..\..\Source\Architecture\Networking\ClientHost.cpp" />
+    <ClCompile Include="..\..\Source\Architecture\Networking\ClientStandard.cpp" />
     <ClCompile Include="..\..\Source\Architecture\Networking\Packet.cpp" />
+    <ClCompile Include="..\..\Source\Architecture\Networking\ServerHost.cpp" />
     <ClCompile Include="..\..\Source\Architecture\Rng.cpp" />
     <ClCompile Include="..\..\Source\Architecture\Signals\Connection.cpp" />
     <ClCompile Include="..\..\Source\Architecture\Timer.cpp" />
