--- a/Projects/Client/Libs.props
+++ b/Projects/Client/Libs.props
@@ -26,7 +26,7 @@
       </Command>
     </CustomBuildStep>
     <ClCompile>
-      <ForcedIncludeFiles>stdafx.h;%(ForcedIncludeFiles)</ForcedIncludeFiles>
+      <ForcedIncludeFiles>%(ForcedIncludeFiles)</ForcedIncludeFiles>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup />
