--- a/Projects/Client/Client.vcxproj
+++ b/Projects/Client/Client.vcxproj
@@ -141,6 +141,7 @@
     <ClInclude Include="..\..\Source\Architecture\Dialogues\DialogueTree.hpp" />
     <ClInclude Include="..\..\Source\Architecture\Entity.hpp" />
     <ClInclude Include="..\..\Source\Architecture\GameData.hpp" />
+    <ClInclude Include="..\..\Source\Architecture\Grid.h" />
     <ClInclude Include="..\..\Source\Architecture\Managers\FontManager.hpp" />
     <ClInclude Include="..\..\Source\Architecture\Managers\InputManager.hpp" />
     <ClInclude Include="..\..\Source\Architecture\Managers\NetworkManager.hpp" />
@@ -152,7 +153,9 @@
     <ClInclude Include="..\..\Source\Architecture\Networking\NetworkClient.hpp" />
     <ClInclude Include="..\..\Source\Architecture\Networking\NetworkServer.hpp" />
     <ClInclude Include="..\..\Source\Architecture\Networking\Packet.hpp" />
+    <ClInclude Include="..\..\Source\Architecture\Pathfinding.h" />
     <ClInclude Include="..\..\Source\Architecture\Rng.h" />
+    <ClInclude Include="..\..\Source\Architecture\SearchCell.h" />
     <ClInclude Include="..\..\Source\Architecture\Signals\Connection.hpp" />
     <ClInclude Include="..\..\Source\Architecture\Signals\Disconnector.hpp" />
     <ClInclude Include="..\..\Source\Architecture\Signals\Signal.hpp" />
@@ -184,6 +187,7 @@
     <ClCompile Include="..\..\Source\Architecture\Dialogues\Dialogue.cpp" />
     <ClCompile Include="..\..\Source\Architecture\Dialogues\DialogueTree.cpp" />
     <ClCompile Include="..\..\Source\Architecture\GameData.cpp" />
+    <ClCompile Include="..\..\Source\Architecture\Grid.cpp" />
     <ClCompile Include="..\..\Source\Architecture\Managers\FontManager.cpp" />
     <ClCompile Include="..\..\Source\Architecture\Managers\InputManager.cpp" />
     <ClCompile Include="..\..\Source\Architecture\Managers\NetworkManager.cpp" />
@@ -192,6 +196,7 @@
     <ClCompile Include="..\..\Source\Architecture\Networking\NetworkClient.cpp" />
     <ClCompile Include="..\..\Source\Architecture\Networking\NetworkServer.cpp" />
     <ClCompile Include="..\..\Source\Architecture\Networking\Packet.cpp" />
+    <ClCompile Include="..\..\Source\Architecture\Pathfinding.cpp" />
     <ClCompile Include="..\..\Source\Architecture\Rng.cpp" />
     <ClCompile Include="..\..\Source\Architecture\Signals\Connection.cpp" />
     <ClCompile Include="..\..\Source\Architecture\Timer.cpp" />
