--- a/Projects/Client/Client.vcxproj
+++ b/Projects/Client/Client.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="..\..\Source\Architecture\Dialogues\DialogueTree.hpp" />
     <ClInclude Include="..\..\Source\Architecture\Entity.hpp" />
     <ClInclude Include="..\..\Source\Architecture\GameData.hpp" />
+    <ClInclude Include="..\..\Source\Architecture\Managers\EntityManager.hpp" />
     <ClInclude Include="..\..\Source\Architecture\Managers\FontManager.hpp" />
     <ClInclude Include="..\..\Source\Architecture\Managers\InputManager.hpp" />
     <ClInclude Include="..\..\Source\Architecture\Managers\NetworkManager.hpp" />
@@ -194,6 +195,7 @@
     <ClCompile Include="..\..\Source\Architecture\Dialogues\Dialogue.cpp" />
     <ClCompile Include="..\..\Source\Architecture\Dialogues\DialogueTree.cpp" />
     <ClCompile Include="..\..\Source\Architecture\GameData.cpp" />
+    <ClCompile Include="..\..\Source\Architecture\Managers\EntityManager.cpp" />
     <ClCompile Include="..\..\Source\Architecture\Managers\FontManager.cpp" />
     <ClCompile Include="..\..\Source\Architecture\Managers\InputManager.cpp" />
     <ClCompile Include="..\..\Source\Architecture\Managers\NetworkManager.cpp" />
